# http-nudger

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.rst  dev-requirements.txt  setup.cfg  tox.ini
http_nudger/: helpers.py  http_nudger.py  monitor.py  persister.py  url_status.py
infra/k8s/: http-nudger-monitor.yaml  http-nudger-persister.yaml
infra/terraform/: kafka.tf  main.tf  postgres.tf  variables.tf
tests/: test_e2e.py  test_monitor.py  test_persister.py  test_url_status.py
