[metadata]
name = http-nudger
version = attr: http_nudger._version.__version__
author = Aleksandr Kolosov
author_email = alexander@kolosov.xyz
description = 
url = https://github.com/askolosov/http-nudger

[options]
packages = find:
install_requires =
    click >=8.0.1,<8.1
    requests >=2.26.0,<2.27
    aiokafka >=0.7.2,<0.8.0
python_requires = >=3.9,<3.10

[options.extras_require]
testing =
    pytest >=6.2.5,<6.3
    pytest-cov >=2.12.1,<2.13

[options.entry_points]
console_scripts =
    http-nudger=http_nudger.http_nudger:cli

[mypy]
ignore_missing_imports = True

[flake8]
max-line-length = 88

[isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
line_length = 88
